Add 4 new TNC tab fields (MRD-3944)

--- a/source/resources/FieldLabels.properties
+++ b/source/resources/FieldLabels.properties
@@ -504,6 +504,10 @@
 40.AssociatedProjectsText = Associated Projects
 40.PsuedoClassificationsAsMultilineText = Project Classification(s)
 40.OrganizationalPriorities = Organizational Priorities
+40.ProjectResourcesScorecard = Project Resources Scorecard
+40.ProjectLevelComments = Project-level Comments
+40.ProjectCitations = Citations
+40.CapStandardsScorecard = CAP Standards Scorecard
 
 #41 FOS project data
 41.TrainingType = Training Type
