MRD-4102: New language dropdown in summary

--- a/source/resources/FieldLabels.properties
+++ b/source/resources/FieldLabels.properties
@@ -139,6 +139,7 @@
 # ProjectMetaData
 11.ProjectMetadata = Project
 11.PseudoTagProjectFilename = Project Filename
+11.ProjectLanguage = Primary Project Data Language
 11.ProjectName = Project Name
 11.ProjectStatus = Project Status
 11.NextSteps = Next Steps
