Fixed icon and label so category one is exported to rtf. Updated fieldLabels.properties

--- a/source/resources/FieldLabels.properties
+++ b/source/resources/FieldLabels.properties
@@ -599,3 +599,8 @@
 55.Label = Audiences
 55.PeopleCount = # of People in Audience
 55.Summary = Audience Summary
+
+#56 Category One
+56.Label = Category One Name
+56.Code = Source Code
+56.Comments = Comments
