New Category Two work plan tab.  Create/Delete buttons.

--- a/source/resources/FieldLabels.properties
+++ b/source/resources/FieldLabels.properties
@@ -604,3 +604,8 @@
 56.Label = Category One Name
 56.Code = Source Code
 56.Comments = Comments
+
+#57 Category Two
+57.Label = Category Two Name
+57.Code = Source Code
+57.Comments = Comments
