MRD-3868: Added new SubTarget row to strat plan customization tree table (and related changes). Added variations of is() method to subtarget. Cleanup.

--- a/source/resources/FieldLabels.properties
+++ b/source/resources/FieldLabels.properties
@@ -31,6 +31,7 @@
 3.WhoRollupRefs = Who Rollup
 3.Details = Details
 3.ProgressReportRefs = Progress Reports
+3.Comments = Comments
 
 # FactorLink
 6.Stress = Stress
@@ -456,6 +457,7 @@
 35.Label = Text
 
 # Sub Target
+36.SubTarget = Nested Target
 36.ShortLabel = ID 
 36.Label = Name
 36.Detail = Details
