Added UI to change budget level for rollup reports

--- a/source/resources/FieldLabels.properties
+++ b/source/resources/FieldLabels.properties
@@ -33,6 +33,9 @@
 3.ProgressReportRefs = Progress Reports
 3.Comments = Comments
 
+# ViewData
+5.BudgetRollupReportTypes = Rollup Types
+
 # FactorLink
 6.Stress = Stress
 6.StressLabel = Stress
