Added workunits table mode to rollup reports.

--- a/source/resources/FieldLabels.properties
+++ b/source/resources/FieldLabels.properties
@@ -255,6 +255,7 @@
 12.MetaWorkUnitColumnCode = Work Units
 12.MetaExpenseAmountColumnCode = Projected Expenses
 12.MetaBudgetDetailColumnCode = Budget Totals
+12.MetaRollupReportsWorkUnitsColumnCode = Rollup Work Units Report
 12.ResourceType = Resource Type
 12.Initials = Resource ID
 12.Name = Given Name
