Filtering total project time period costs using object hiearchy instead of single object.

--- a/source/resources/FieldLabels.properties
+++ b/source/resources/FieldLabels.properties
@@ -256,6 +256,8 @@
 12.MetaExpenseAmountColumnCode = Projected Expenses
 12.MetaBudgetDetailColumnCode = Budget Totals
 12.MetaRollupReportsWorkUnitsColumnCode = Rollup Work Units Report
+12.MetaRollupReportsExpensesColumnCode = Rollup Expenses Report
+12.MetaRollupReportsBudgetDetailsColumnCode = Rollup Budget Details Report
 12.ResourceType = Resource Type
 12.Initials = Resource ID
 12.Name = Given Name
