--- a/source/resources/FieldLabels.properties
+++ b/source/resources/FieldLabels.properties
@@ -255,9 +255,9 @@
 12.MetaWorkUnitColumnCode = Work Units
 12.MetaExpenseAmountColumnCode = Projected Expenses
 12.MetaBudgetDetailColumnCode = Budget Totals
-12.MetaRollupReportsWorkUnitsColumnCode = Rollup Work Units Report
-12.MetaRollupReportsExpensesColumnCode = Rollup Expenses Report
-12.MetaRollupReportsBudgetDetailsColumnCode = Rollup Budget Details Report
+12.MetaAnalysisWorkUnitsColumnCode = Analysis Work Units Report
+12.MetaAnalysisExpensesColumnCode = Analysis Expenses Report
+12.MetaAnalysisBudgetDetailsColumnCode = Analysis Budget Details Report
 12.ResourceType = Resource Type
 12.Initials = Resource ID
 12.Name = Given Name
