Ensure all types have translated names, plus a test for the internal name and translated names of all object types

--- a/source/resources/FieldLabels.properties
+++ b/source/resources/FieldLabels.properties
@@ -37,6 +37,7 @@
 5.BudgetRollupReportTypes = Rollup Types
 
 # FactorLink
+6.Link = Factor Link
 6.Stress = Stress
 6.StressLabel = Stress
 6.Targetlink = Target Link
@@ -276,6 +277,7 @@
 12.PseudoTagActivities = Activities
 
 # DiagramLink
+13.DiagramLink = Diagram Link
 13.FromDiagramFactorId = From
 13.ToDiagramFactorId = To
 13.Color = Color
@@ -419,18 +421,23 @@
 27.DiagramObjectLabel = Diagram Name
 
 # Planning View Configuration
+29.PlanningViewConfiguration = Planning View Configuration
 29.Label = Label
 29.TagRowConfiguration = Rows
 29.TagColConfiguration = Columns
 29.TagDiagramDataInclusion = Include Data From
 
 # WwfProjectData
+30.WwfProjectData = WwfProjectData
 30.RelatedProjects = Related Projects
 30.ProjectNumber = Project Number
 30.ManagingOffices = Managing Offices
 30.LinkToGlobalTargets = Link To Global Targets
 30.EcoRegions = Ecoregions
 30.Regions = Regions
+
+# CostAllocationRule
+31.CostAllocationRule = Cost Allocation Rule
 
 # Measurement
 32.Measurement = Measurement
@@ -443,6 +450,7 @@
 32.Trend = Trend
 
 # Stress
+33.Stress = Stress
 33.ShortLabel = ID
 33.Label = Name
 33.Detail = Details
@@ -454,6 +462,7 @@
 33.Irreversibility = Irreversibility
 
 # ThreatStressRating
+34.ThreatStressRating = Threat-Stress Rating
 34.PseudoThreatRating = Summary Rating
 34.IsActive = Active?
 34.Contribution = Contribution
@@ -469,11 +478,13 @@
 36.Detail = Details
 
 # Progress Report
+37.ProgressReport = Progress Report
 37.ProgressStatus = Progress Status
 37.ProgressDate = Progress Date
 37.Details = Details
 
 #38 Rare Project Data
+38.RareProjectData = Rare Project Data
 38.FlagshipSpeciesCommonName = Flagship Species Common Name
 38.FlagshipSpeciesScientificName = Flagship Species Scientific Name
 38.FlagshipSpeciesDetail = Flagship Species Details (< 200 words)
@@ -498,6 +509,7 @@
 38.Cohort = Cohort
 
 #39 Wcs project Data
+39.WcsProjectData = WCS Project Data
 39.OrganizationalFocus = Organizational Focus
 39.OrganizationalLevel = Organizational Level
 39.SwotCompleted = Completed?
@@ -506,6 +518,7 @@
 39.StepUrl = URL
 
 #40 TNC project data
+40.TncProjectData = TNC Project Data
 40.ConProProjectNumber = ConPro Project Number
 40.ProjectSharingCode = Data Sharing
 40.ProjectPlaceTypes = Project Types
@@ -519,6 +532,7 @@
 40.CapStandardsScorecard = CAP Standards Scorecard
 
 #41 FOS project data
+41.FosProjectData = FOS Project Data
 41.TrainingType = Training Type
 41.TrainingDates = Training Dates
 41.Trainers = Trainer(s)
@@ -536,6 +550,7 @@
 42.Comments = Comments
 
 #43 WCPA project data
+43.WCPAProjectData = WCPA Project Data
 43.LegalStatus = Legal Status
 43.LegislativeContext = Legislative Context
 43.PhysicalDescription = Physical Description
@@ -549,26 +564,34 @@
 43.ManagementResources = Management Resources
 
 #44 Xenodata
+44.Xenodata = External System Data
 44.ProjectId = ConPro Project Number
 
 #45 Progress Percent
+45.ProgressPercent = Progress Percent
 45.PercentDate = Date
 45.PercentComplete = Percent Complete
 45.PercentCompleteNotes = Details
 
 #46 Report Template
+46.ReportTemplate = Report Template
 46.Label = Name
 46.ShortLabel = ID
 46.Comments = Comments
 46.IncludeSectionCodes = Content
 
 #47 Tagged Object Set
+47.TaggedObjectSet = Tag
 47.ShortLabel = ID
 47.Label = Name
 47.Comments = Comments
 
 #48 Table Settings
+48.TableSettings = Table Settings
 48.TagTableSettingsMap = Table Settings
+
+#49 ThreatRatingCommentsData
+49.ThreatRatingCommentsData = Threat Rating Comments
 
 #50 Project Scope Box
 50.ProjectScopeBox = Project Scope Box
@@ -598,12 +621,15 @@
 52.TargetViability = Target Viability Status
 
 #53 ICUN Redlist Species
+53.IucnRedlistSpecies = IUCN Redlist Species
 53.Label = Name
 
 #54 Other Notable Species
+54.OtherNotableSpecies = Other Notable Species
 54.Label = Name
 
 #55. Audience
+55.Audience = Audience
 55.Label = Audiences
 55.PeopleCount = # of People in Audience
 55.Summary = Audience Summary
