--- a/source/resources/FieldLabels.properties
+++ b/source/resources/FieldLabels.properties
@@ -267,7 +267,7 @@
 12.Location = Location
 12.MetaWhoTotal = Who
 12.Label = Name
-12.Code = Source Code
+12.Code = Code
 12.SpeciesLatinName = Species Latin Name
 12.ThreatRating = Rating
 12.PseudoTagIndicators = Indicators
@@ -283,15 +283,15 @@
 14.ResourceAssignment = Assignment
 
 # Accounting Code
-15.Label = Category Name
-15.Code = Category Code
+15.Label = Accounting Code Name
+15.Code = Accounting Code
 15.Comments = Comments
 15.AccountingCode = Accounting Code
 
 # Funding Source
 16.FundingSource = Funding Source
-16.Label = Source Name
-16.Code = Source Code
+16.Label = Funding Source Name
+16.Code = Funding Source Code
 16.Comments = Comments
 
 # Key Ecological Attribute
