--- a/source/resources/FieldLabels.properties
+++ b/source/resources/FieldLabels.properties
@@ -625,13 +625,13 @@
 55.Summary = Audience Summary
 
 #56 Category One
-56.CategoryOne = Budget Category One
-56.Label = Category One Name
-56.Code = Source Code
+56.CategoryOne = Budget Category #1
+56.Label = Name
+56.Code = ID
 56.Comments = Comments
 
 #57 Category Two
-57.CategoryTwo = Budget Category Two
-57.Label = Category Two Name
-57.Code = Source Code
+57.CategoryTwo = Budget Category #2
+57.Label = Name
+57.Code = ID
 57.Comments = Comments
