--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cmp-eam</name>
+	<name>miradi</name>
 	<comment></comment>
 	<projects>
 		<project>martus-swing</project>
