Changed link properties panel to save isBidi to DL instead of FL

--- a/source/resources/FieldLabels.properties
+++ b/source/resources/FieldLabels.properties
@@ -278,6 +278,7 @@
 13.FromDiagramFactorId = From
 13.ToDiagramFactorId = To
 13.Color = Color
+13.IsBidirectionalLink = Bidirectional Link
 
 # Assignment
 14.ResourceAssignment = Assignment
